ColorLabs17/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-standalone-1.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-quickcheck-core-0.9.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-migrationsupport-5.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-platform-runner-1.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-params-5.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-platform-testkit-1.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-api-5.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-platform-console-1.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-engine-5.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-platform-suite-api-1.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-vintage-engine-5.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-platform-reporting-1.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-jupiter-5.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-platform-engine-1.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-platform-launcher-1.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/junit-platform-commons-1.5.2.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/hamcrest-library-1.3.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.base.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.controls.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.fxml.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.graphics.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.media.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.properties.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.swing.jar:/private/var/folders/sd/4s0srw5n1hndzjrk5w66z1540000gn/T/AppTranslocation/2553FF01-6F9B-4833-AB2C-26D12D9DD778/d/BlueJ.app/Contents/Resources/Java/javafx/lib/javafx.web.jar:/Users/sass/Desktop/colorlabs21-ssarayu25/ColorLabs17/+libs/mediaComp.jar:/Users/sass/Desktop/colorlabs21-ssarayu25/ColorLabs17
-d
/Users/sass/Desktop/colorlabs21-ssarayu25/ColorLabs17/doc
-encoding
UTF-8
-charset
UTF-8
/Users/sass/Desktop/colorlabs21-ssarayu25/ColorLabs17/bookClasses/Picture.java
<---- end of javadoc command ---->
Loading source file /Users/sass/Desktop/colorlabs21-ssarayu25/ColorLabs17/bookClasses/Picture.java...
Constructing Javadoc information...
/Users/sass/Desktop/colorlabs21-ssarayu25/ColorLabs17/bookClasses/SimplePicture.java:43: error: cannot access PictureFrame
  private PictureFrame pictureFrame;
          ^
  bad source file: /Users/sass/Desktop/colorlabs21-ssarayu25/ColorLabs17/bookClasses/PictureFrame.java
    file does not contain class bookClasses.PictureFrame
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
1 error
